add: ジャンル操作
